<resources>
    <string name="app_name">CleWa!</string>
    <string name="bienve">Bienvenido a</string>
    <string name="name">CleWa!</string>
    <string name="slogan">Con el agua deberías hacer una tregua</string>
    <string name="bienvenido_inicio">¡Bienvenido!</string>
    <string name="ingresodatos">Ingresa los datos requeridos para poder continuar:</string>
    <string name="nombre">Nombre</string>
    <string name="valor">Último consumo (m<sup>3</sup>)</string>
    <string name="estrato">Estrato social:</string>
    <string name="empezar">Empezar</string>
    <string name="boton1">¿Quieres ahorrar en tu factura de agua este mes?</string>
    <string name="boton2">Consejos para el manejo eficiente del agua</string>
    <string name="boton3">Razones por las cuales debes empezar a ahorrar el agua</string>
    <string name="boton4">Progreso semanal</string>
    <string name="boton5">Ver datos de los sensores</string>
    <string name="boton6">Dispositivo de electrocoagulación</string>
    <string name="boton1.1">¿Cuánto quieres ahorrar este mes?</string>
    <string name="volver_boton1">Volver</string>
    <string name="cantidad_ahorrar">Digite una cantidad en pesos</string>
    <string name="boton2.1">Imagen1</string>
    <string name="boton2.2">Imagen2</string>
    <string name="boton2.3">Imagen3</string>
    <string name="boton2.4">Imagen4</string>
    <string name="boton3.1">Imagen2</string>
    <string name="boton3.2">Imagen3</string>
    <string name="boton3.3">Imagen4</string>
    <string name="proceso">Empezar proceso de electrocoagulación:</string>
    <string name="sensorgas">           Sensor de gas</string>
    <string name="sgas">No se detecta gas</string>




</resources>